@@ -89,3 +89,5 @@ asS3 <- function(object, flag = TRUE, complete = TRUE)
     }
     NULL
 }
+
+returnValue <- function(default = NULL) .Internal(returnValue(default))
